Fix file upload drag over flickering (re-rendering of the component)

--- a/style.css
+++ b/style.css
@@ -4083,6 +4083,10 @@ input.tab:checked + .tab-content,
   bottom: var(--tooltip-tail-offset);
 }
 
+.invisible{
+  visibility: hidden;
+}
+
 .fixed{
   position: fixed;
 }
